--- a/pacman-master/debug.htm
+++ b/pacman-master/debug.htm
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Mon Oct 29 12:41:32 PDT 2018 -->
+    <!-- last updated: Tue Oct 30 12:46:24 PDT 2018 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
@@ -39,16 +39,27 @@
         }
     </style>
 
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
     <script src="https://wagenaartje.github.io/neataptic/cdn/1.4.7/neataptic.js"></script>
 
-n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/main.js"></script>n<script src="src/neat.js"></script>n
+n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/geneticPlayer.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/main.js"></script>n<script src="src/genetic.js"></script>n
 
 </head>
 
 <body>
     <div style='font-family: ArcadeR'> </div>
-    <canvas id='canvas'><div id="canvas-warning">Your browser does not support HTML Canvas.  Please upgrade!</div></canvas>
-    <canvas id='atlas' style="display:none"></canvas>
+
+        <div class="row">
+            <div class="col-md-3">
+
+        <canvas id='canvas'><div id="canvas-warning">Your browser does not support HTML Canvas.  Please upgrade!</div></canvas>
+        <canvas id='atlas' style="display:none"></canvas>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
