--- a/pacman-master/debug.htm
+++ b/pacman-master/debug.htm
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Thu Nov  1 12:39:31 PDT 2018 -->
+    <!-- last updated: Thu Nov  1 13:53:53 PDT 2018 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
@@ -66,8 +66,8 @@ n<script src="src/populations/population60.js"></script>n<script src="src/geneti
                 <canvas id='canvas'><div id="canvas-warning">Your browser does not support HTML Canvas.  Please upgrade!</div></canvas>
                 <canvas id='atlas' style="display:none"></canvas>
             </div>
-            <div class="col-md-9">
-                <div style="padding-top: 100px; text-align: center">
+            <div class="col-md-9" style="text-align: center">
+                <div style="padding-top: 100px">
                     <h2>Agent Network Graph</h2>
                     <div>Generation: <span id="generation"></span></div>
                     <div>Agent: <span id="agent"></span></div>
