--- a/pacman-master/debug.htm
+++ b/pacman-master/debug.htm
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Thu Nov  1 18:15:03 PDT 2018 -->
+    <!-- last updated: Tue Nov  6 12:17:06 PST 2018 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
@@ -54,7 +54,7 @@
     <script src="https://rawgit.com/wagenaartje/neataptic/master/graph/graph.js"></script>
     <link rel="stylesheet" type="text/css" href="https://rawgit.com/wagenaartje/neataptic/master/graph/graph.css">
 
-n<script src="src/populations/population60.js"></script>n<script src="src/geneticDeclarations.js"></script>n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/geneticPlayer.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/genetic.js"></script>n<script src="src/main.js"></script>n
+n<script src="src/populations/population250-longer.js"></script>n<script src="src/geneticDeclarations.js"></script>n<script src="src/inherit.js"></script>n<script src="src/sound.js"></script>n<script src="src/random.js"></script>n<script src="src/game.js"></script>n<script src="src/direction.js"></script>n<script src="src/Map.js"></script>n<script src="src/colors.js"></script>n<script src="src/mapgen.js"></script>n<script src="src/atlas.js"></script>n<script src="src/renderers.js"></script>n<script src="src/hud.js"></script>n<script src="src/galagaStars.js"></script>n<script src="src/Button.js"></script>n<script src="src/Menu.js"></script>n<script src="src/inGameMenu.js"></script>n<script src="src/sprites.js"></script>n<script src="src/Actor.js"></script>n<script src="src/Ghost.js"></script>n<script src="src/Player.js"></script>n<script src="src/geneticPlayer.js"></script>n<script src="src/actors.js"></script>n<script src="src/targets.js"></script>n<script src="src/ghostCommander.js"></script>n<script src="src/ghostReleaser.js"></script>n<script src="src/elroyTimer.js"></script>n<script src="src/energizer.js"></script>n<script src="src/fruit.js"></script>n<script src="src/executive.js"></script>n<script src="src/states.js"></script>n<script src="src/input.js"></script>n<script src="src/cutscenes.js"></script>n<script src="src/maps.js"></script>n<script src="src/vcr.js"></script>n<script src="src/genetic.js"></script>n<script src="src/main.js"></script>n
 
 </head>
 
