--- a/pacman-master/index.htm
+++ b/pacman-master/index.htm
@@ -4,7 +4,7 @@
 <head>
 
     <title>Pac-Man</title>
-    <!-- last updated: Thu Nov  1 18:15:03 PDT 2018 -->
+    <!-- last updated: Tue Nov  6 12:17:06 PST 2018 -->
     <!-- Lock viewport on mobile devices. -->
     <!--
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
